[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["ekwize <ulanovsega@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
SQLAlchemy = "^2.0.28"
pydantic = {extras = ["email"], version = "^2.6.3"}
passlib = "^1.7.4"
alembic = "^1.13.1"
aioredis = "^2.0.1"
celery = "^5.3.6"
python-json-logger = "^2.0.7"
pytest-asyncio = "^0.23.5"
pydantic-settings = "^2.2.1"
asgiref = "^3.8.1"
asyncpg = "^0.29.0"
boto3 = "^1.34.87"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
